master_yaml/jenkins/external_name.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external
  namespace: ns-jenkins
spec:
  type: ExternalName
  externalName: updates.jenkins.io/update-center.json
