master_yaml/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: ns-jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    #ingress.bluemix.net/rewrite-path: "serviceName=app-service rewrite=/"
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  - host: opyter.iptime.org
    http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins-leader-svc
            port: 
              number: 80



# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: jenkins-ingress
#   namespace: ns-jenkins
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
#     alb.ingress.kubernetes.io/certificate-arn: <YOUR_CERTIFICATE>
#     alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/actions.redirect-blueocean: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path": "/blue/pipelines", "Query": "#{query}", "StatusCode": "HTTP_301"}}'
# spec:
#   rules:
#   # Here is where you put your domain ex: jenkins.rocks
#   - host: abc.sample.com
#     http:
#       paths:
#       - path: /
#         backend:
#           service:
#             name: jenkins-leader-svc
#             port: 
#               number: use-annotation
#       - path: /*
#         backend:
#           service:
#             name: jenkins-ui
#             port: 
#               number: ui
