master_yaml/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: ns-jenkins
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/app-root: /jenkins

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  - host: opyter.iptime.org
    http:
      paths:
      - path: /jenkins/*
        pathType: Prefix
        backend:
          service:
            name: jenkins-leader-svc
            port:
              number: 60000
